<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright © 2021 92AK
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.ntak</groupId>
        <artifactId>pearl-zip</artifactId>
        <version>0.0.0.1</version>
    </parent>

    <artifactId>pearl-zip-license</artifactId>
    <packaging>jar</packaging>

    <licenses>
        <license>
            <name>BSD 3-Clause</name>
            <url>http://opensource.org/licenses/BSD-3-Clause</url>
        </license>
    </licenses>

    <dependencies>
        <dependency>
            <groupId>com.ntak</groupId>
            <artifactId>pearl-zip-archive</artifactId>
            <version>${project.version}</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>com.google.code.maven-replacer-plugin</groupId>
                <artifactId>replacer</artifactId>
                <version>1.5.3</version>
                <executions>
                    <execution>
                        <id>license-replacement</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>replace</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <includes>
                        <include>${project.basedir}/target/classes/LICENSE-OVERRIDE.xml</include>
                    </includes>
                    <replacements>
                        <replacement>
                            <token>:: PEARL-ZIP VERSION ::</token>
                            <value>${project.version}</value>
                        </replacement>
                        <replacement>
                            <token>:: LANG ::</token>
                            <value>${lang}</value>
                        </replacement>
                        <replacement>
                            <token>:: COUNTRY ::</token>
                            <value>${country}</value>
                        </replacement>
                    </replacements>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>15</source>
                    <target>15</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>2.0.0</version>
                <executions>
                    <execution>
                        <id>aggregate-download-licenses</id>
                        <goals>
                            <goal>aggregate-download-licenses</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <errorRemedy>warn</errorRemedy>
                    <cleanLicensesOutputDirectory>false</cleanLicensesOutputDirectory>
                    <outputEncoding>UTF-8</outputEncoding>
                    <licensesOutputDirectory>${project.basedir}/src/main/resources/ref</licensesOutputDirectory>
                    <licensesOutputFile>${project.basedir}/src/main/resources/LICENSE.xml</licensesOutputFile>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>increment-version</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>com.google.code.maven-replacer-plugin</groupId>
                        <artifactId>replacer</artifactId>
                        <version>1.5.3</version>
                        <executions>
                            <execution>
                                <id>version-set</id>
                                <phase>validate</phase>
                                <goals>
                                    <goal>replace</goal>
                                </goals>
                                <configuration>
                                    <includes>
                                        <include>${project.basedir}/pom.xml</include>
                                    </includes>
                                    <replacements>
                                        <replacement>
                                            <token>${project.version}</token>
                                            <value>${pearlzip.next.version}</value>
                                        </replacement>
                                    </replacements>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>